feat(improve-visibility): add css styling to imporve visibilty when form items are disabled

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -4,3 +4,12 @@ html,
 body {
   margin: 0;
 }
+
+/* Custom CSS for disabled form */
+.ant-input-disabled,
+.ant-select-selector,
+.ant-select-selection-item,
+.ant-checkbox-wrapper,
+.ant-radio-wrapper {
+  color: black !important; /* Set the color to black */
+}
